# TRISTAN

./: .babel.config.js  .editorconfig  .gitignore  3rdpartylicenses.txt  LICENSE  Procfile  README.md  config-overrides.js  default.nix  index.html  main.0348520553d106bd.esm.js  main.2298bd0e6f675e74.esm.js  main.2671eb10fda4c510.esm.js  main.2aa9c2c9478b0d5c.esm.js  main.2dc41a7f20cf1704.esm.js  main.3691132bfd01da46.css  main.3fdcd6f6ca8e305e.esm.js  main.81f2e00983f398aa.esm.js  main.b14888a4376ab81e.esm.js  main.d5d494708a84c8ad.esm.js  main.f895132d0d34e89b.esm.js  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  yarn.nix
.github/workflows/: build.yml  deploy-public-demo.yml  deploy-storybook.yml  deploy.yml  test.yml
apps/angular-demo/: custom-webpack-config.js  jest.config.ts  project.json  tsconfig.app.json  tsconfig.json
apps/tristan-core-e2e/: cypress.json  project.json
apps/tristan-standalone/: custom-webpack-config.js  jest.config.ts  project.json
apps/tristan-standalone-e2e/: cypress.json  project.json
contrib/: extract_text.py  extract_xml.py  generate_fake_tgcm.py
demo/: 127.e81c98dca0f4c7b4.esm.js  147.b6842649e4b56caa.esm.js  3rdpartylicenses.txt  index.html  main.2aa9c2c9478b0d5c.esm.js.LICENSE.txt  main.681ddef2787867ca.esm.js  main.aa3bc9300cc06c6a.esm.js  main.acaf432248b8a55d.esm.js  main.acaf432248b8a55d.esm.js.LICENSE.txt  polyfills.94c6004ba319cc69.esm.js  runtime.c1c9980b55e7b67f.esm.js  runtime.c3553dae7dcfdd04.esm.js
demo/angular/: angular.json  (+1 more)
nix/: arion-compose.nix  backend.nix  default.nix  docker.nix  frontend.nix  overlay.nix  python.nix  sources.json  yarn.nix
storybook/: 142.86242e92c2898df7cdb6.manager.bundle.js  142.fface393.iframe.bundle.js  272.06e0635d.iframe.bundle.js  273.163dd5eb.iframe.bundle.js  295.d83e951a71faee6e8e4a.manager.bundle.js  32.28d8ae2f.iframe.bundle.js  32.4595f22c1175e04e6849.manager.bundle.js  546.e4758db4f5b517dfe5cc.manager.bundle.js  551.41b7f0eb3a5f37c835c8.manager.bundle.js  551.66e65fba.iframe.bundle.js  566.07f2e38c.iframe.bundle.js  566.a5730b6c3b71b7282090.manager.bundle.js  691.7cd91fb8180e20eb3990.manager.bundle.js  701.db66da50.iframe.bundle.js  725.3258dc50.iframe.bundle.js  725.d2bd2821f9829c6c26d1.manager.bundle.js  897.205dab6a.iframe.bundle.js  897.6b40e55f.iframe.bundle.js  897.b2c976ed.iframe.bundle.js  897.ff54da2b.iframe.bundle.js  iframe.html  index.html  main.8d7379381c42525d3aa6.manager.bundle.js  main.c1f66549.iframe.bundle.js  project.json  runtime~main.2146d7097b5756b765b7.manager.bundle.js  runtime~main.ea6fd421.iframe.bundle.js
(+189 files in other folders)
