[tool.poetry]
name = "eig_tristan"
version = "0.1.0"
description = "Application web pour l'EIG Tristan"
authors = ["Ryan LAHFA <ryan.lahfa@justice.gouv.fr>"]
license = "MIT"
packages = [ { include = "api", from = "src" }, { include = "analyzer", from = "src" }, { include = "common", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
django-webpack-loader = "^1.3.0"
djangorestframework = "^3.12.4"
django-haystack = "^3.1.1"
PyPDF2 = "^1.26.0"
# textract = "^1.6.4"
# pdf2dataset = "^0.5.3"
pdftotext = "^2.2.1"
celery = {extras = ["redis"], version = "=5.2.2"}
xmltodict = "^0.12.0"
django-cors-headers = "^3.10.0"
# flair = "^0.9"
django-environ = "^0.8.1"
gunicorn = "^20.1.0"
requests = "^2.26.0"
django-debug-toolbar = "^3.2.2"
django-extensions = "^3.1.3"
Werkzeug = "^2.0.1"
psycopg2 = "^2.9.2"
drf-spectacular = {extras = ["sidecar"], version = "^0.21.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Faker = "^13.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
